# epic_miner

./: .gitmodules  CMakeLists.txt  README.md  dataset.cpp  dataset.hpp  encdec.cpp  encdec.hpp  epic_miner_version.h.in  exec_events.hpp  executor.cpp  executor.hpp  jconf.cpp  jconf.hpp  jconf_p.hpp  job.hpp  json.hpp  main.cpp  miner.cpp  miner.hpp  misc.hpp  pool.cpp  pool.hpp  pp_dataset.cpp  pp_dataset.hpp  pp_miner.cpp  pp_miner.hpp  rx_dataset.cpp  rx_dataset.hpp  rx_miner.cpp  rx_miner.hpp  thdq.hpp  uv.hpp  vector32.hpp
cmake/: GenerateVersionHeader.cmake
console/: console.cpp  console.hpp  input_console.cpp  input_console.hpp
net/: net_interface.cpp  net_interface.hpp  socket.cpp  socket.hpp  socks.hpp  tls_interface.cpp  tls_interface.hpp
